# news_agent

./: .dockerignore  .env.example  .gitignore  CODEBASE_MAP.md  Dockerfile  README.md  build.ipynb  docker-compose.yml  pyproject.toml
design/: Epic-1.md
sessions/: ses_0aabdf18affe6c6iyJLC4yeFff.json  ses_0abb9d797ffeqOakXeSm5cZJ0E.json
src/: article_scraper.py  auth.py  config.py  imap_client.py  main.py  models.py
src/parsers/: __init__.py  base.py  daily_dev.py  generic.py
src/services/: email_reader.py
tests/: conftest.py  test_article_scraper.py  test_auth.py  test_config.py  test_email_reader.py  test_imap_client.py  test_main.py  test_models.py  test_parsers.py
