[project]
name = "news-agent"
version = "0.1.0"
description = "MCP server that reads daily.dev emails and fetches article text"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.51.0",
    "fastapi-mcp>=0.4.0",
    "imap-tools>=1.13.0",
    "requests>=2.32.0",
    "beautifulsoup4>=4.15.0",
    "trafilatura>=2.1.0",
    "pydantic-settings>=2.14.0",
    "lxml>=6.0.0",
    "lxml-html-clean>=0.4.5",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.0",
    "mypy>=2.3.0",
    "types-requests>=2.32.0",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "httpx>=0.28.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pydantic_settings.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["src"]
